public/create/pages/css/shared/default.css
body, html { position: relative; font-size: 100%; padding: 0; margin: 0; }

/*angular cloak*/
[ng\:cloak], [ng-cloak], .ng-cloak {
  display: none !important;
}

/* Reset */
*,
*:after,
*:before {
	-webkit-box-sizing: border-box;
	-moz-box-sizing: border-box;
	box-sizing: border-box;
}

/* Clearfix */
.clearfix:before,
.clearfix:after {
	content: " ";
	display: table;
}
.clearfix:after {
	clear: both;
}

/* General Styling */
body {
	background: none #F8F9F9;
	font-family: 'Roboto', Arial, sans-serif;
	color: #666;
}

h1 {
	font-size: 2.25em;
	margin: 0.8em 0 0.4em 0;
}
h2 {
	font-size: 1.25em;
	margin: 0.8em 0 0.4em 0;
}

a {
	color: #000;
	text-decoration: none;
}

a.breadcrumb {
	color: #666;
	text-decoration: underline;
}

p.breadcrumb {
	margin-top: 10px;
	margin-bottom: 10px;
	float: left;
}

p.savedstamp {
	margin-top: 10px;
	margin-bottom: 0.5em;
	float: right;
	text-align: right;
}

a:hover {
	color: #666;
}

.main, .container > header {
	width: 100%;
	margin: 0 auto;
	padding: 1em;
}

.container > header {
	padding: 1em;
}

.container > header h1 {
	font-size: 2.125em;
	line-height: 1.3;
	margin: 0;
	float: left;
	font-weight: 400;
}

.container > header span {
	display: block;
	font-weight: 700;
	text-transform: uppercase;
	letter-spacing: 0.5em;
	padding: 0 0 0.6em 0.1em;
}

.container > header nav {
	float: right;
}

.container > header nav a {
	display: block;
	float: left;
	position: relative;
	width: 2.5em;
	height: 2.5em;
	background: #fff;
	border-radius: 50%;
	color: transparent;
	margin: 0 0.1em;
	border: 4px solid #47a3da;
	text-indent: -8000px;
}

.container > header nav a:after {
	content: attr(data-info);
	color: #47a3da;
	position: absolute;
	width: 600%;
	top: 120%;
	text-align: right;
	right: 0;
	opacity: 0;
	pointer-events: none;
}

.container > header nav a:hover:after {
	opacity: 1;
}

.container > header nav a:hover {
	background: #47a3da;
}

.main > section {
	width: 100%;
	margin: 0 auto;
}

.main > section h2 {
	font-weight: 300;
	color: #333;
}

input[type="password"], input[type="text"], input[type="email"] {
	-moz-border-radius: 1px;
	-webkit-border-radius: 1px;
	border-radius: 1px;
	-webkit-appearance: none;
	border: none;
	background: #f6f6f6;
	font-size: 15px;
	width: 250px;
	height: 32px;
	padding: 0 0 0 15px;
	margin: 0 5px 0 0;
}
input.has-error {
	border: 1px solid #b94a48;
}
input:focus {
	outline: -webkit-focus-ring-color auto 5px;
	outline-color: -webkit-focus-ring-color;
	outline-style: auto;
	outline-width: 5px;
}
textarea {
	-moz-border-radius: 1px;
	-webkit-border-radius: 1px;
	border-radius: 1px;
	-webkit-appearance: none;
	border: none;
	background: #f6f6f6;
	font-size: 15px;
	width: 250px;
	height: 32px;
	padding: 0 0 0 15px;
	margin: 0 5px 0 0;
}

/*.main > section input {
	border: none;
	background: #fff;
	color: #000;
	padding: 0.5em;
	display: inline-block;
	width: 90%;
	margin: 5px 0 0;
	font-size: 0.8em;
	outline: none;
}
.main > section input:focus {
	border: 1px solid #ffff99;
	border-radius: 5px;
	outline: none;
}*/

.main > section button {
	outline: none;
	border: none;
	background: #ffff99;
	color: #000;
	padding: 0.5em;
	display: inline-block;
	width: 90%;
	cursor: pointer;
	margin: 5px 0 0;
	font-size: 0.8em;
}

.main > section button.active {
	background: #CCCC66;
}

.main > section button.disabled {
	background: #B3B34D;
	pointer-events: none;
}

.icon-drop:before,
.icon-arrow-left:before {
	font-family: 'fontawesome';
	position: absolute;
	top: 0;
	width: 100%;
	height: 100%;
	speak: none;
	font-style: normal;
	font-weight: normal;
	line-height: 2;
	text-align: center;
	color: #47a3da;
	-webkit-font-smoothing: antialiased;
	text-indent: 8000px;
	padding-left: 8px;
}

.container > header nav a:hover:before {
	color: #fff;
}

.hidden {
	display: none;
}

/*registration styling*/
.registration {
	background-color: #c6c6c6;
	position: fixed;
	width: 100%;
	padding: 20px;
	z-index: 20;
	box-shadow: 0 8px 50px -6px rgba(255,245,108,0.5);
	bottom: 0;
}
.green {
	background-color: #5cb85c;
}
.registration-form {
	float: left;
}
.registration-text {
	font-weight: 900;
	line-height: 32px;
	margin: 0 10px 0 0;
	float: left;
}
.registration-text.validate {
	color: #fff;
	text-align: center;
	margin: 0;
	opacity: 1;
	float: none;
}
.button.registration-button {
	font-size: 15px;
}
.registration-button {
	-moz-border-radius: 1px;
	-webkit-border-radius: 1px;
	border-radius: 1px;
	-webkit-appearance: none;
	border: none;
	background: #fff265;
	color: #231f20;
	font-size: 20px;
	font-weight: bold;
	width: 120px;
	height: 33px;
	cursor: pointer;
	margin: 0 0 0 5px;
	text-align: center;
}
.registration-close-button {
	position: absolute;
	right: 10px;
	top: 6px;
	color: #fff;
	font-size: 120%;
	cursor: pointer;
}
.registration-close-button:hover {
	color: #000;
}
.error-boxes {
	position: fixed;
	margin-left: 425px;
	margin-bottom: -90px;
	margin-top: -40px;
}
.arrow-box {
	position: fixed;
	background: #FF0500;
	border: 2px solid #fff;
	padding-top: 5px;
	height: 32px;
	width: 200px;
	color: #fff;
}
.arrow-box.second {
	margin-left: 259px;
}
.arrow-box.third {
	margin-left: 518px;
}
.arrow-box:after, .arrow-box:before {
	top: 100%;
	left: 50%;
	border: solid transparent;
	content: " ";
	height: 0;
	width: 0;
	position: absolute;
	pointer-events: none;
}
.arrow-box:after {
	border-color: rgba(213, 0, 0, 0);
	border-top-color: #FF0500;
	border-width: 10px;
	margin-left: -10px;
}
.arrow-box:before {
	border-color: rgba(194, 225, 245, 0);
	border-top-color: #fff;
	border-width: 13px;
	margin-left: -13px;
}
/* Styling for the ngProgress itself */
#ngProgress {
	margin: 0;
	padding: 0;
	z-index: 99998;
	background-color: #fff265;
	color: #fff265;
	box-shadow: 0 0 10px 0; /* Inherits the font color */
	height: 3px;
	opacity: 0;
	/* Add CSS3 styles for transition smoothing */
	-webkit-transition: all 0.5s ease-in-out;
	-moz-transition: all 0.5s ease-in-out;
	-o-transition: all 0.5s ease-in-out;
	transition: all 0.5s ease-in-out;
}

/* Styling for the ngProgress-container */
#ngProgress-container {
	position: fixed;
	margin: 0;
	padding: 0;
	top: 0;
	left: 0;
	right: 0;
	z-index: 99999;
}

.feedback{
	background:#c6c6c6;
	width: 50px;
	-webkit-transform-style: preserve-3d;
	-moz-transform-style: preserve-3d;
	transform-style: preserve-3d;
	height: calc(100% / 3);
	cursor: pointer;
	padding: 0;
	text-align: center;
}

.feedback-fixed {
	position:fixed;
	bottom:0;
	right:0;
	min-height: 150px;
}

.feedback img {
	position: relative;
	top: 50%;
	-webkit-transform: translateY(-50%);
	-ms-transform: translateY(-50%);
	transform: translateY(-50%);
}

/* Styling for autocomplete */
.autocomplete{
  width: 100%;
  position: relative;
}

.autocomplete input {
  font-size: 1.2em;
  width: 100%;
  padding:0.4em;
}

.autocomplete ul {
  position: absolute;
  top: 30px;
  left: 0;
  width: 100%;
  border-left: 1px solid #efefef;
  border-right: 1px solid #efefef;
  border-bottom: 1px solid #efefef;
  z-index: 5;
}

.autocomplete li {
  text-align: left;
  list-style:none;
  width: 100%;
  padding:0.4em;
  background-color: #fff;
}

.autocomplete li.active {
  width: 100%;
  background-color: #fff265;
}

.autocomplete .highlight {
  background-color: #E2E2E2;
}

.autocomplete li.active .highlight {
  background: #fff265;
}

